{
    "name": "CarAction",
    "maps": [
        {
            "name": "CarActionMap",
            "id": "03e9e656-50c5-481e-bbae-eeb161a11c32",
            "actions": [
                {
                    "name": "MoveAction",
                    "type": "Value",
                    "id": "cca6a2c0-458d-4fbf-857c-3c42f76a4633",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HandleAction",
                    "type": "Value",
                    "id": "bfbda2c2-9ca5-4d6e-bea3-c309a429fa1c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Brake",
                    "type": "Button",
                    "id": "9067d90b-0956-43aa-9b2b-dc047af7a91b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "gearUpAction",
                    "type": "Button",
                    "id": "3d14f37f-290a-48f6-9a11-e068054da0dc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GearDownAction",
                    "type": "Button",
                    "id": "44f4e915-b71d-40d3-860f-040fe5c28944",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestSystemAction",
                    "type": "Button",
                    "id": "338f24a2-20c3-4f20-8da4-c59d8acc1c40",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetKey",
                    "type": "Button",
                    "id": "cfcb5803-8ac9-42b6-a49f-203bd189d384",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseButton",
                    "type": "Button",
                    "id": "8c9436c8-6fd3-41ee-bf53-d29852b4259c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2db1b991-bbcb-4ce7-97fe-59eb22383c70",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "15e2cdff-0df4-4368-b381-4de3113b722c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandleAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "8d7855df-585e-4225-80d5-34df3f4f19eb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandleAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1b0add76-b10c-4c6b-84ae-02f4630803c0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandleAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d30e9d34-f5dc-4d10-82d9-f9fef9573307",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8661644f-586a-4f08-be06-fe125f7b03f3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "gearUpAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55360dae-c1ef-46fc-9e16-47aced187e4f",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearDownAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36fd326a-d808-49a2-822d-bbb11503039b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestSystemAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ec7b2ab-16c6-4d6d-976a-984f0587d4b9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59fdaee3-6e50-47d6-9fc0-8d68497e14bc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}